--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "dependencies": {
     "apollo-server-express": "^3.12.1",
     "express": "^4.18.2",
-    "graphql": "^16.8.1",
-    "mongoose": "^7.5.4"
+    "graphql": "^16.8.1"
   }
 }
