--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.0"
   }
 }
