--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/taylorgehrts/Traxonic#readme",
   "dependencies": {
     "apollo-server-express": "^3.12.1",
+    "aws-amplify": "^5.3.11",
     "express": "^4.18.2",
     "graphql": "^16.8.1"
   }
