--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/taylorgehrts/Traxonic#readme",
   "dependencies": {
+    "@aws-amplify/ui-react": "^5.3.1",
     "apollo-server-express": "^3.12.1",
     "aws-amplify": "^5.3.11",
     "express": "^4.18.2",
