--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,9 @@
     "aws-amplify": "^5.3.11",
     "graphql": "^16.8.1",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
+    "react-h5-audio-player": "^3.9.0",
     "react-router-dom": "^5.3.4"
   },
   "devDependencies": {
