--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Music-Collab-and-file-sharing-app",
   "main": "server/server.js",
   "scripts": {
-    "start": "node server/server.js"
+    "start": "node Server/server.js"
   },
   "repository": {
     "type": "git",
