--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ amplify/backend/amplify-meta.json
 amplify/backend/.temp
 build/
 dist/
-node_modules/
+
 aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
@@ -30,3 +30,4 @@ amplifytools.xcconfig
 .secret-*
 **.sample
 #amplify-do-not-edit-end
+node_modules
