--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "start": "node Server/server.js",
-    "postinstall": "npm install --prefix server"
+    "postinstall": "test -d server && npm install --prefix server || true"
   },
   "repository": {
     "type": "git",
