updated json to call out specific node version???

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/taylorgehrts/Traxonic#readme",
   "engines": {
-    "node": "16.x" 
+    "node": "v16.20.2" 
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^5.3.1",
