--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Node.js
-
+node_modules/
 # Visual Studio Code
 .vscode
 # Debug logs
@@ -19,7 +19,7 @@ amplify/backend/amplify-meta.json
 amplify/backend/.temp
 build/
 dist/
-
+node_modules/
 aws-exports.js
 awsconfiguration.json
 amplifyconfiguration.json
@@ -30,5 +30,3 @@ amplifytools.xcconfig
 .secret-*
 **.sample
 #amplify-do-not-edit-end
-
-node_modules
