--- a/Server/package.json
+++ b/Server/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "engines": {
-    "node": "16.x"
+    "node": "v16.20.2"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
